# ich-docker-eli

./: .env  README.md  docker-compose-template.yml.j2  docker-compose.yml  generate_docker_compose.py  pyproject.toml  setup.sh
.github/workflows/: ci.yaml
db_query_api/: .gitignore  Dockerfile  README.md  mix.exs
db_query_api/lib/: db_query_api.ex
db_query_api/lib/db_query_api/: query_service.ex  router.ex
db_query_api/test/: db_query_api_test.exs
