[tool.poetry]
name = "ich-docker-eli"
version = "0.1.0"
description = ""
authors = ["Alb <alberto98fx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
